# WeatherStation-ESP32-BaseStation

./: .gitignore  README.md  platformio.ini
src/: lv_conf.h  weatherstation.cpp
src/config/: config.h
src/gfx/: LGFX_ESP32S3_RGB_MakerfabsParallelTFTwithTouch70.h
src/gui/: gui.cpp  gui.h
src/lvgl/: lv_common.c  lv_common.h  lv_daily_chart.c  lv_daily_chart.h  lv_hourly_chart.c  lv_hourly_chart.h
src/openweather/: openweatherapi.cpp  openweatherapi.h  openweatherdata.cpp  openweatherdata.h
src/task/: brightness_task.cpp  brightness_task.h  clock_task.cpp  clock_task.h  sensor_task.cpp  sensor_task.h  weather_task.cpp  weather_task.h  (+4 more)
src/ui/: CMakeLists.txt  filelist.txt  ui.c  ui.h  ui_events.h
src/ui/fonts/: ui_font_FreeSans10.c  ui_font_FreeSans14.c  ui_font_FreeSans16.c  ui_font_FreeSans18.c  ui_font_FreeSans20.c  ui_font_FreeSans22.c  ui_font_FreeSans24.c  ui_font_FreeSansBold38.c  ui_font_FreeSansBold44.c  ui_font_FreeSansBold46.c  ui_font_FreeSansBold48.c
src/ui/images/: ui_img_01d_png.c  ui_img_01n_png.c  ui_img_02d_png.c  ui_img_02n_png.c  ui_img_03d_png.c  ui_img_03n_png.c  ui_img_04d_png.c  ui_img_04n_png.c  ui_img_09d_png.c  ui_img_09n_png.c  ui_img_10d_png.c  ui_img_10n_png.c  ui_img_11d_png.c  ui_img_11n_png.c  ui_img_13d_png.c  ui_img_13n_png.c  ui_img_50d_png.c  ui_img_50n_png.c  ui_img_arrow_png.c  ui_img_battery_png.c  ui_img_cloud_png.c  ui_img_humidity_png.c  ui_img_pressure_png.c  ui_img_sunrise_png.c  ui_img_sunset_png.c  ui_img_uhr_png.c  ui_img_uv_png.c
src/ui/screens/: ui_Screen.c  ui_SetupScreen.c  ui_WeatherstationScreen.c
(+10 files in other folders)
