SET(SOURCES screens/ui_SetupScreen.c
    screens/ui_WeatherstationScreen.c
    ui.c
    components/ui_comp_hook.c
    ui_helpers.c
    images/ui_img_04d_png.c
    images/ui_img_cloud_png.c
    images/ui_img_uv_png.c
    images/ui_img_arrow_png.c
    images/ui_img_sunrise_png.c
    images/ui_img_sunset_png.c
    images/ui_img_humidity_png.c
    images/ui_img_pressure_png.c
    images/ui_img_battery_png.c
    images/ui_img_uhr_png.c
    images/ui_img_01d_png.c
    images/ui_img_01n_png.c
    images/ui_img_02d_png.c
    images/ui_img_02n_png.c
    images/ui_img_03d_png.c
    images/ui_img_03n_png.c
    images/ui_img_04n_png.c
    images/ui_img_09d_png.c
    images/ui_img_09n_png.c
    images/ui_img_10d_png.c
    images/ui_img_10n_png.c
    images/ui_img_11d_png.c
    images/ui_img_11n_png.c
    images/ui_img_13d_png.c
    images/ui_img_13n_png.c
    images/ui_img_50d_png.c
    images/ui_img_50n_png.c
    fonts/ui_font_FreeSans10.c
    fonts/ui_font_FreeSans14.c
    fonts/ui_font_FreeSans16.c
    fonts/ui_font_FreeSans18.c
    fonts/ui_font_FreeSans20.c
    fonts/ui_font_FreeSans22.c
    fonts/ui_font_FreeSans24.c
    fonts/ui_font_FreeSansBold38.c
    fonts/ui_font_FreeSansBold44.c
    fonts/ui_font_FreeSansBold46.c
    fonts/ui_font_FreeSansBold48.c)

add_library(ui ${SOURCES})
